[metadata]
name = pyvin
version = attr: pyvin.__version__
author = Alex Puffer
description = Python VIN decoder
long_description = file: README.rst
url = https://github.com/arpuffer/pyvin
packages = find:
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    requests ==2.25.1
python_requires = >=3.6
