[metadata]
name = pyvin
version = attr: pyvin.__version__
author = Alex Puffer
description = Python VIN decoder
long_description = file: README.md
url = https://github.com/arpuffer/pyvin
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    requests ==2.25.1
    retry ==0.9.2
python_requires = >=3.6
packages = find:
